--- a/app/src/main/res/layout/activity_productinfo.xml
+++ b/app/src/main/res/layout/activity_productinfo.xml
@@ -1,58 +1,263 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/grey_900">
 
-    <ImageView
-        android:id="@+id/productinfo_imageview_image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="w,4:5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:id="@+id/main_linearlayout_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:gravity="end"
+        android:background="@color/grey_1000">
 
-    <TextView
-        android:id="@+id/productinfo_textview_barcode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Chargement..."
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/productinfo_imageview_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/productinfo_textview_close"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Fermer"
+            android:layout_gravity="center"
+            android:textColor="@color/grey_50"
+            android:textSize="16dp"
+            android:layout_marginEnd="12dp"/>
 
-    <TextView
-        android:id="@+id/productinfo_textview_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Chargement..."
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/productinfo_textview_barcode"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textStyle="bold"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/productinfo_textview_brand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Chargement..."
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/productinfo_textview_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:background="@color/grey_900"
+        android:clipToPadding="false"
+        android:scrollbars="none"
+        android:scrollingCache="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- TODO: Update blank fragment layout -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/spacing_medium"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
+
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/productinfo_loadertextview_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_50"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:layout_marginTop="14dp"
+                app:use_gradient="true"
+                app:corners="16" />
+
+            <com.elyeproj.loaderviewlibrary.LoaderTextView
+                android:id="@+id/productinfo_loadertextview_barcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_50"
+                android:textSize="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                app:use_gradient="true"
+                app:corners="16" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/rounded_background">
+
+                <com.elyeproj.loaderviewlibrary.LoaderImageView
+                    android:id="@+id/productinfo_loaderimageview_image"
+                    android:layout_width="172dp"
+                    android:layout_height="256dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    app:use_gradient="true"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nutriscore"
+                    android:textColor="@color/grey_50"
+                    android:textStyle="bold"
+                    android:textSize="18dp">
+                </TextView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/rounded_background"
+                    android:gravity="center">
+
+                    <com.elyeproj.loaderviewlibrary.LoaderImageView
+                        android:id="@+id/productinfo_loaderimageview_nutriscore"
+                        android:layout_width="172dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        app:use_gradient="true"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Informations"
+                    android:textColor="@color/grey_50"
+                    android:textStyle="bold"
+                    android:textSize="18dp">
+                </TextView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:background="@drawable/rounded_background"
+                    android:padding="18dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:text="Produit"
+                        android:textColor="@color/grey_50"
+                        android:textStyle="bold"
+                        android:textSize="16dp"/>
+
+                    <TextView
+                        android:id="@+id/productinfo_textview_brand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:text="Marque : Chargement..."
+                        android:textColor="@color/grey_50"
+                        android:textSize="14dp"
+                        android:layout_marginTop="8dp"/>
+
+                        <TextView
+                            android:id="@+id/productinfo_textview_quantity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:text="Quantité : Chargement..."
+                            android:textColor="@color/grey_50"
+                            android:textSize="14dp"
+                            android:layout_marginTop="8dp"/>
+
+                        <TextView
+                            android:layout_marginTop="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:text="Ingrédients"
+                            android:textColor="@color/grey_50"
+                            android:textStyle="bold"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/productinfo_textview_ingredients"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:text="Chargement..."
+                            android:textColor="@color/grey_50"
+                            android:textSize="14dp"
+                            android:layout_marginTop="8dp"/>
+
+                        <TextView
+                            android:layout_marginTop="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:text="Allergènes"
+                            android:textColor="@color/grey_50"
+                            android:textStyle="bold"
+                            android:textSize="16dp"/>
+
+                        <TextView
+                            android:id="@+id/productinfo_textview_allergens"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:text="Chargement..."
+                            android:textColor="@color/grey_50"
+                            android:textSize="14dp"
+                            android:layout_marginTop="8dp"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Actions"
+                        android:textColor="@color/grey_50"
+                        android:textStyle="bold"
+                        android:textSize="18dp">
+                    </TextView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:layout_marginTop="12dp"
+                        android:background="@drawable/rounded_background"
+                        android:gravity="center"
+                        android:layout_marginBottom="44dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Definir actions"
+                            android:textColor="@color/grey_50"/>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+
+    </androidx.core.widget.NestedScrollView>
+
+</FrameLayout>
